<resources>
    <string name="app_name">इंदापूर मार्ट</string>
    <string name="action_settings">Settings</string>
    <string name="hint_title">Title</string>
    <string name="dialog_msg_loading_data">Loading data</string>
    <string name="village_name">Village Name</string>
    <string name="select_villages">कृपया तुम्हाला ज्या गावाची माहिती हवी आहे\nती गावे निवडा.</string>
    <string name="mar_owner_name">प्रो.प्रा %1$s</string>
    <string name="mar_phone_no">फोन नंबर</string>
    <string name="hint_mar_phone_no">phone Number</string>
    <string name="mar_time">वेळ</string>
    <string name="mar_open_from_to">सोमवार ते शुक्रवार सकाळी 7 ते सायंकाळी 9</string>
    <string name="mar_sunday_off">रविवारी बंद</string>
    <string name="mar_address">पत्ता </string>

    <string name="no_record_found"><u>सदर प्रकरणी कोणती ही नोंदनी नाही.\nकृपया नोंदनी करा.</u></string>
    <string name="register">नोंदनी करा</string>


    <string name="nav_village_selection">गावे निवडा</string>
    <string name="nav_share_app">शेर करा</string>
    <string name="nav_register_shop">नोंदणी करा</string>
    <string name="nav_rate_us">पसंती दर्शवा</string>
    <string name="nav_contact_us">संपर्क साधा</string>
    <string name="nav_about_us">आमच्या विषयी</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="owner_name_eng">Owner Name</string>
    <string name="owner_name_mar">मालकाचे नाव</string>
    <string name="shop_name_eng">Shop Name</string>
    <string name="shop_name_mar">दुकानाचे/उद्योगाचे नाव</string>
    <string name="mobile_no_mar">मोबाईल नंबर</string>
    <string name="shop_address_mar">पत्ता</string>
    <string name="shop_open_time_mar">वेळ</string>
    <string name="main_category_mar">मेन कॅटेगरी</string>
    <string name="sub_category_mar">उप कॅटेगरी</string>
    <string name="submit">जतन करा</string>
    <string name="business_registration">उद्योगाची नोंद करा</string>

    <string name="txt_ok">OK</string>

    <string name="title_about_us">आमच्या विषयी</string>
    <string name="about_us">
इंदापूर मार्ट हे अँप्लिकेशन इंदापूर मधील सर्व उद्योगधांची माहिती एकत्र आणण्यासाठी बनवलेले आहे.
या अँप्लिकेशन मध्ये तुमचे,तुमच्या व्यवसायाचे नाव,पत्ता  आणि मोबाईल नं अशी माहिती विविध कॅटेगरी आणि उपकॅटेगरी मध्ये विभागणी करून दाखवलेली आहे.इंदापूर मधील व्यवसाय सर्व लोकांपर्यंत पोहचवणे आणि लोकांना व्यवसायांपर्यंत पोहचवणे हा इंदापूर मार्ट चा उद्देश आहे.
    </string>
    <string name="title_terms_conditions">नियम आणि अटी</string>
    <string name="terms_n_conditions">
        नियम आणि अटी : -\n\n
    १) इंदापूर मार्ट मध्ये नोंदणी केलेले मोबाईल नं अँप्लिकेशन मध्ये सर्वाना दिसणार आहेत त्यामुळे आपला प्रायव्हेट मोबाईल नं ने नोंदणी करू नये.\n
    २) इंदापूर मार्ट मध्ये नोंदणी झाल्यानंतर ती माहिती तपासल्यानंतरच अँप्लिकेशन वर दिसेल म्हणून योग्य ती माहिती भरावी.\n
    ३) नोंदणी केल्या नंतर आपली माहिती अँप्लिकेशन मध्ये दिसण्यासाठी २४ तासापर्यंत चा वेळ लाघु शकतो.
    </string>

    <string name="time">e.g. 10:00 ते 09:00, रविवार बंद</string>
    <string name="about_us_title">आमच्या विषयी</string>
    <string name="contact_us">संपर्क साधा</string>
    <string name="contact_us_name">Developer : Suhas Bansode</string>
    <string name="contact_us_email">indapurmart@gmail.com</string>
    <string name="contact_us_no">Mobile No : <u>8668911016</u></string>

    <string name="marathi_input_inst">मराठी मध्ये माहिती प्रदान करण्यासाठी आपल्याला सेटींग मधून मराठी भाषा निवडणे आवश्यक आहे.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_setting">GO TO SETTING</string>

    <string name="company_name">Email ID</string>
    <string name="phone">Phone : </string>
    <string name="contact_no">866 891 1016</string>
    <string name="call_us">Call Us  </string>
    <string name="email_id">Email ID </string>

    <string name="msg_select_category">श्रेणी निवडा</string>
    <string name="msg_select_sub_category">उप श्रेणी निवडा</string>
    <string name="msg_select_village">गावे निवडा</string>
    <string name="msg_enter_name">मराठीमध्ये नाव द्या</string>
    <string name="msg_enter_shop_name">मराठीमध्ये दुकानाचे नाव द्या</string>
    <string name="msg_enter_mobile_no">मोबाइल नंबर द्या</string>
    <string name="msg_enter_shop_address_name">दुकानाचे पत्ता द्या</string>
    <string name="msg_enter_shop_start_end_time">दुकानाचे सुरु आणि बंद वेळ लिहा</string>
</resources>
