<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/expandable_tb_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/expandable_title_margin_right"
            app:expandedTitleMarginStart="@dimen/expandable_title_margin_left"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_profile_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_owner_details"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_user_details"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="#e5e5e5"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_outline"
                    android:paddingLeft="@dimen/margin_8"
                    android:paddingTop="@dimen/margin_8"
                    android:text="@string/mar_owner_name"
                    android:textSize="@dimen/text_size_20" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_place"
                    android:drawablePadding="@dimen/margin_8"
                    android:hint="@string/mar_address"
                    android:paddingLeft="@dimen/margin_8"
                    android:textSize="@dimen/text_size_20" />

                <!--<TextView
                    android:id="@+id/tv_phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_8"
                    android:paddingTop="@dimen/margin_8"
                    android:text="@string/mar_phone_no"
                    android:textSize="@dimen/text_size_20" />-->

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/hint_mar_phone_no"
                    android:paddingLeft="@dimen/margin_8"
                    android:paddingRight="@dimen/margin_8"
                    android:paddingTop="@dimen/margin_8"
                    android:textSize="@dimen/text_size_20" />

                <View
                    android:id="@+id/tv_time"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:background="@color/colorPrimary"></View>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_time"
                    android:paddingLeft="@dimen/margin_8"
                    android:paddingRight="@dimen/margin_8"
                    android:paddingTop="@dimen/margin_8"
                    android:text="@string/mar_time"
                    android:textSize="@dimen/text_size_20" />

                <TextView
                    android:id="@+id/tv_open_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_8"
                    android:paddingRight="@dimen/margin_8"
                    android:paddingTop="@dimen/margin_8"
                    android:text="@string/mar_open_from_to" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_call"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg_call"
                    android:drawableTint="@color/colorPrimary"
                    android:drawableTop="@drawable/ic_phone"
                    android:gravity="center"
                    android:paddingTop="@dimen/margin_8"
                    android:text="call" />

                <!--<TextView
                    android:id="@+id/tv_add_contact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#e5e5e5"
                    android:drawableTint="@android:color/white"
                    android:drawableTop="@drawable/ic_person_add"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="add contact" />-->


                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg_call"
                    android:drawableTint="@android:color/white"
                    android:drawableTop="@drawable/ic_share"
                    android:gravity="center"
                    android:paddingTop="@dimen/margin_8"
                    android:text="share" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout><!--</RelativeLayout>-->
