<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/abl_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_contact_us"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_contact_us_logo"
                android:layout_width="wrap_content"
                android:layout_height="156dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_20" />

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_36"
            app:cardCornerRadius="@dimen/margin_4"
            card_view:cardCornerRadius="@dimen/cardview_default_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/email_id"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_toRightOf="@id/tv_email"
                    android:text="@string/contact_us_email"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/tv_email"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_weight="4"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/tv_contact_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/call_us"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_contact_us_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tv_email_id"
                    android:layout_below="@id/view"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_toRightOf="@id/tv_contact_us"
                    android:text="@string/contact_no"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <View
                android:layout_width="@dimen/height_56"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_weight="4"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_20" />

            <View
                android:layout_width="@dimen/height_56"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_weight="4"
                android:background="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/height_156"
            android:layout_height="@dimen/height_156"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_16"
            android:background="@drawable/button_border_contact_us"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="@dimen/height_136"
                android:layout_height="@dimen/height_136"
                android:layout_margin="@dimen/margin_16"
                android:background="@drawable/button_contact_us"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_contact_us_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/sym_action_call"
                    android:tint="@android:color/white" />

                <TextView
                    android:id="@+id/tv_contact_us_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_no"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>-->
    </LinearLayout>
</ScrollView>